# DiscordRPCAndroid

./: .gitignore  README.md  build.gradle.kts  local.properties  settings.gradle.kts
.agent/workflows/: analyze_logs.md  clean_project.md  commit_changes.md  verify_build.md
.github/workflows/: android-release.yml
app/: build.gradle.kts
app/libs/: README.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gametextinput_stub.cpp  main.cpp
app/src/main/java/com/example/discordrpc/: DiscordGateway.kt  DiscordMediaService.kt  ImageUploader.kt  MainActivity.kt  OnboardingActivity.kt
app/src/main/java/com/example/discordrpc/models/: DiscordEnums.kt  DiscordUser.kt
app/src/main/java/com/example/discordrpc/parsing/: MetadataParsers.kt
app/src/main/java/com/example/discordrpc/ui/components/: AppCard.kt  StatusCard.kt
app/src/main/java/com/example/discordrpc/ui/screens/: MainScreen.kt  OnboardingScreen.kt
app/src/main/java/com/example/discordrpc/ui/theme/: AppTheme.kt
app/src/main/res/layout/: activity_main.xml  activity_onboarding.xml  item_app.xml  item_header_status.xml  overlay_ui.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
